# cargo-advent

./: ARCHITECTURE.md  Cargo.toml  Makefile.toml  README.md
src/: args.rs  date.rs  error.rs  lib.rs  main.rs  run.rs
tests/: errors.rs  platforms.rs
